# Arcane

./: .gitignore  CMakeLists.txt
Editor/: CMakeLists.txt
Editor/src/: main.cpp
Engine/: CMakeLists.txt
Engine/src/: internal.cpp
Engine/src/headers/arcane/: config.h  glm.h  internal.h  light.h  lodepng.h  mesh.h  object.h  resourceManager.h  script.h  time.h  transform.h
Engine/src/headers/arcane/WindowRendering/: computeShader.h  input.h  renderer.h  shader.h
Engine/src/headers/arcane/jobSystem/: circularQueue.h  semaphore.h  workOrder.h
Engine/src/jobSystem/: CMakeLists.txt  worker.cpp
Engine/src/main/: camera.cpp  light.cpp  material.cpp  object.cpp  resourceManager.cpp  scene.cpp  tinyobj.h
Engine/src/windowRendering/: input.cpp  shader.cpp  window.cpp
Engine/src/windowRendering/OpenGL43/: batchingObject.h  internal.h  pbrRenderer.cpp  renderer.cpp  renderer.h  textureAtlas.h
Engine/src/windowRendering/SDL2/: input.h
src/: internal.cpp  main.cpp
src/UI/: CMakeLists.txt  arcBuffer.cpp  arcButton.cpp  arcLayout.cpp  arcObject.cpp  border.cpp  constraint.cpp
src/headers/arcane/: camera.h  image.h  material.h  objLoader.h  scene.h  script.h  threadSafe.h
src/headers/arcane/UI/: arcBuffer.h  arcButton.h  arcLayout.h  arcObject.h  arcPoint.h  arcSize.h  border.h  constraint.h
src/headers/arcane/WindowRendering/: computeShader.h  renderer.h  window.h
src/headers/arcane/jobSystem/: JobSystem.h  job.h  worker.h
src/jobSystem/: JobSystem.cpp  job.cpp  semaphore.cpp  workOrder.cpp
src/main/: CMakeLists.txt  image.cpp  lodepng.cpp  mesh.cpp  objLoader.cpp  scene.cpp  script.cpp  time.cpp  transform.cpp
src/windowRendering/: CMakeLists.txt  computeShader.cpp  renderer.cpp  window.cpp
src/windowRendering/OpenGL43/: batchingObject.cpp  internal.cpp  pbrRenderer.h  renderer.cpp  renderer.h  textureAtlas.cpp
src/windowRendering/SDL2/: input.cpp  windowSDL2.cpp
